# pdfaudit

./: .env.example  .gitignore  All Links with Final Destinations.csv  Missing Links Reviewed.csv  Missing Links.csv  README.md  merged.xlsx  new.xlsx  old.xlsx  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: domain.py
backend/app/services/: adobe.py  adobe_cache.py  adobe_service.py  audit_job_service.py  audit_rule_catalog.py  downloader.py  file_service.py  jobs.py  layer1.py  pdfua_service.py  report_service.py  reporting.py  retrieval.py  rule_catalog.py
backend/app/services/checks/: check_base.py  pdf_utils.py
backend/app/services/checks/rules/: alt_text.py  bookmarks.py  footnotes.py  forms.py  headings.py  language.py  links.py  lists.py  metadata.py  page_numbers.py  rule_alt_text.py  rule_bookmarks.py  rule_footnotes.py  rule_forms.py  rule_headings.py  rule_language.py  rule_links.py  rule_lists.py  rule_metadata.py  rule_page_numbers.py  rule_scanned_pdf.py  rule_security.py  rule_tables.py  rule_tagged_pdf.py  rule_toc.py  scanned_pdf.py  security.py  tables.py  tagged_pdf.py  toc.py
backend/tests/: test_adobe.py  test_adobe_service.py  test_api.py  test_api_routes.py  test_audit_job_service.py  test_jobs.py  test_report_service.py  test_reporting.py  test_rule_checks.py  test_rules.py
docs/: Audit tracker (Full. live).xlsx  engineering-spec.md  rubrics.md  thread-handoff-2026-04-01.md  v1-parity-check.md  work-machine-handoff.md  (+1 more)
(+93 files in other folders)
